--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SafePass</string>
+    <string name="facebook_app_id">746662086262572</string>
 </resources>
